--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@heroicons/vue": "^2.2.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
     "@vueuse/core": "^10.7.1",
@@ -20,7 +21,6 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "dayjs": "^1.11.11",
-    "heroicons": "^2.2.0",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
     "postcss": "^8.5.1",
@@ -28,6 +28,7 @@
     "primevue": "^4.2.5",
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
+    "vue-awesome-paginate": "^1.2.0",
     "vue-loading-overlay": "6.0",
     "vue-router": "^4.5.0",
     "vuex": "^4.0.0"
