--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 8080",
     "build": "run-p type-check \"build-only {@}\" --",
     "preview": "vite preview",
     "build-only": "vite build",
@@ -31,6 +31,7 @@
     "vue-awesome-paginate": "^1.2.0",
     "vue-loading-overlay": "6.0",
     "vue-router": "^4.5.0",
+    "vue-sweetalert2": "^5.0.11",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
