--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "vue": "^3.5.13",
     "vue-awesome-paginate": "^1.2.0",
     "vue-loading-overlay": "6.0",
+    "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0",
     "vue-sweetalert2": "^5.0.11",
     "vuex": "^4.0.0"
