--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "apexcharts": "^3.45.1",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.9",
     "dayjs": "^1.11.11",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
@@ -29,10 +30,12 @@
     "tailwindcss": "^3.4.17",
     "vue": "^3.5.13",
     "vue-awesome-paginate": "^1.2.0",
+    "vue-chartjs": "^5.3.2",
     "vue-loading-overlay": "6.0",
     "vue-multiselect": "^3.2.0",
     "vue-router": "^4.5.0",
     "vue-sweetalert2": "^5.0.11",
+    "vue-toastification": "^2.0.0-rc.5",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
