--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "chart.js": "^4.4.9",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "dayjs": "^1.11.11",
     "pinia": "^2.3.0",
     "pinia-plugin-persistedstate": "^4.2.0",
